@@ -1,3 +1,11 @@
+2014-08-26	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/changelogfiles.sh: renamed to changelogupdate.sh
+
+	* src/changelogupdate.sh: can be invoked by emacs and vim
+
+	* src/changelogline.sh: cheader comments reformatted
+
 2014-08-25	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/changelogfiles.sh: script to automatically format git changes for a changelog
@@ -42,4 +50,3 @@
 2014-05-20	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/aldcopy.sh: Scripts removed altogether. Autoconf should handle them
-
